<resources>
    <string name="app_name">OC-19</string>

    <string name="daily">Daily Cases</string>
    <string name="total">Total Cases</string>
    <string name="cumulative_cases">cumulative cases</string>
    <string name="daily_cases">daily cases</string>
    <string name="seven_day_moving_average">7-day moving average</string>
    <string name="cumulative_deaths">total deaths</string>
    <string name="daily_deaths">deaths today</string>
    <string name="daily_tests">tests today</string>
    <string name="cumulative_tests">cumulative tests</string>
    <string name="icu">cases in ICU</string>
    <string name="hospitalized">cases hospitalized</string>
    <string name="cumulative_recovered">cumulative recovered</string>
    <string name="county">Orange County</string>
    <string name="vaccine">Vaccine Data</string>
    <string name="defaultCity">Aliso Viejo</string>
    <string name="defaultCityWidget">-</string>
    <string name="defaultCount">0</string>
    <string name="defaultDate">-/-/----</string>
    <string name="defaultDateWidget">-/-/----</string>
    <string name="defaultPercentage">-.--%</string>
    <string name="total_population">total population</string>
    <string name="one_dose">with one dose</string>
    <string name="two_doses">with two doses</string>
    <string name="one_dose_widget">One Dose</string>
    <string name="two_doses_widget">Two Doses</string>
    <string name="city_source">Source: OC Public Works</string>
    <string name="county_source">Source: OC Health Care Agency</string>
    <string name="vaccine_source">Source: Democrat and Chronicle (CDC)</string>
    <string name="vaccine_widget">OC Vaccine Data</string>
    <string name="select_widget_config">Choose a location whose case counts your widget will track.</string>

    <string-array name="city_list">
        <item>Aliso Viejo</item>
        <item>Anaheim</item>
        <item>Brea</item>
        <item>Buena Park</item>
        <item>Costa Mesa</item>
        <item>Coto de Caza</item>
        <item>Cypress</item>
        <item>Dana Point</item>
        <item>Fountain Valley</item>
        <item>Fullerton</item>
        <item>Garden Grove</item>
        <item>Huntington Beach</item>
        <item>Irvine</item>
        <item>La Habra</item>
        <item>La Palma</item>
        <item>Ladera Ranch</item>
        <item>Laguna Beach</item>
        <item>Laguna Hills</item>
        <item>Laguna Niguel</item>
        <item>Laguna Woods</item>
        <item>Lake Forest</item>
        <item>Los Alamitos</item>
        <item>Midway City</item>
        <item>Mission Viejo</item>
        <item>Newport Beach</item>
        <item>Orange</item>
        <item>Placentia</item>
        <item>Rancho Mission Viejo</item>
        <item>Rancho Santa Margarita</item>
        <item>Rossmoor</item>
        <item>San Clemente</item>
        <item>San Juan Capistrano</item>
        <item>Santa Ana</item>
        <item>Seal Beach</item>
        <item>Silverado</item>
        <item>Stanton</item>
        <item>Trabuco Canyon</item>
        <item>Tustin</item>
        <item>Villa Park</item>
        <item>Westminster</item>
        <item>Yorba Linda</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>