<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical"
    android:weightSum="8"
    android:id="@+id/vaccine_widget"
    android:theme="@style/ThemeOverlay.OC19.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:layout_weight="5"
        android:weightSum="8"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/vaccine_widget"
            android:textColor="@color/white"
            android:textSize="@dimen/date"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:id="@+id/vaccine_widget_date"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/defaultDateWidget"
            android:textColor="@color/white"
            android:textSize="@dimen/label"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:weightSum="4"
        android:paddingBottom="2dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/vaccine_widget_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultPercentage"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/two_doses_widget"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/label" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/vaccine_widget_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultPercentage"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/one_dose_widget"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/label" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>