<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical"
    android:weightSum="8"
    android:id="@+id/oc19_widget"
    android:theme="@style/ThemeOverlay.OC19.AppWidgetContainer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_500"
        android:layout_weight="5"
        android:weightSum="8"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:id="@+id/oc19_widget_selectedCity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/defaultCity"
            android:textColor="@color/white"
            android:textSize="@dimen/date"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:id="@+id/oc19_widget_date"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/defaultDateWidget"
            android:textColor="@color/white"
            android:textSize="@dimen/label"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:weightSum="4"
        android:orientation="horizontal">
        <!--
        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:src="@drawable/baseline_keyboard_arrow_left_grey_48dp" />
        -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/oc19_widget_daily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultCount"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/oc19_widget_dailyLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/daily"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/oc19_widget_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultCount"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/title"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/oc19_widget_totalLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/total"
                android:textColor="@color/orange_500"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

        </LinearLayout>
        <!--
        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:src="@drawable/baseline_keyboard_arrow_right_grey_48dp" />
        -->
    </LinearLayout>

</LinearLayout>